src/Parser/Generated/DTSchemaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from src/Parser/Generated/DTSchema.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DTSchema.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class DTSchemaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		IDENTIFIER=18, LINE_COMMENT=19, SPACE=20;
	public const int
		RULE_start = 0, RULE_list_o_definition_p_ = 1, RULE_start__y_ = 2, RULE_definition = 3, 
		RULE_enum_t_case = 4, RULE_list_o_enum_t_case_p_ = 5, RULE_def_t_enum = 6, 
		RULE_def_t_extern = 7, RULE_def_t_record = 8, RULE_optional_t_annotation = 9, 
		RULE_fieldname = 10, RULE_field = 11, RULE_ctor = 12, RULE_constructor = 13, 
		RULE_list_o_constructor_p_ = 14, RULE_def_t_sort = 15, RULE_seplist_o__i__s__i__s_def_t_typ_p_ = 16, 
		RULE_seplist_o__i__s__i__s_field_p_ = 17, RULE_emptyseplist_o__i__s__i__s_field_p_ = 18, 
		RULE_def_t_typ = 19, RULE_nullable_t_ret = 20;
	public static readonly string[] ruleNames = {
		"start", "list_o_definition_p_", "start__y_", "definition", "enum_t_case", 
		"list_o_enum_t_case_p_", "def_t_enum", "def_t_extern", "def_t_record", 
		"optional_t_annotation", "fieldname", "field", "ctor", "constructor", 
		"list_o_constructor_p_", "def_t_sort", "seplist_o__i__s__i__s_def_t_typ_p_", 
		"seplist_o__i__s__i__s_field_p_", "emptyseplist_o__i__s__i__s_field_p_", 
		"def_t_typ", "nullable_t_ret"
	};

	private static readonly string[] _LiteralNames = {
		null, "'|'", "'enum'", "'='", "'extern'", "'type'", "'?'", "':'", "'fn'", 
		"'json'", "'('", "')'", "','", "'['", "']'", "'{'", "'}'", "'=>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "IDENTIFIER", "LINE_COMMENT", "SPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DTSchema.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DTSchemaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


	public static Sort Sort (string name,System.Collections.Generic.List<Ctor> variants)
	{
	    return (Sort) new Sort(name,variants);
	}
	public static Ctor Ctor (string name,System.Collections.Generic.List<Field> fields)
	{
	    return (Ctor) new Ctor(name,fields);
	}
	public static Field Field (string name,Ty typ,bool nullable)
	{
	    return (Field) new Field(name,typ,nullable);
	}
	public static Ty TyTuple (System.Collections.Generic.List<Ty> elts)
	{
	    return (Ty) new TyTuple(elts);
	}
	public static Ty TyNamed (string name)
	{
	    return (Ty) new TyNamed(name);
	}
	public static Ty TyMap (Ty key,Ty value)
	{
	    return (Ty) new TyMap(key,value);
	}
	public static Ty TyList (Ty elt)
	{
	    return (Ty) new TyList(elt);
	}
	public static Ty TyJSON ()
	{
	    return (Ty) new TyJSON();
	}
	public static Ty TyFn (System.Collections.Generic.List<Field> args,Ret ret)
	{
	    return (Ty) new TyFn(args,ret);
	}
	public static Ty TyEnum (string name)
	{
	    return (Ty) new TyEnum(name);
	}
	public static Ret NoRet ()
	{
	    return (Ret) new NoRet();
	}
	public static Ret HasRet (Ty ret,bool nullable)
	{
	    return (Ret) new HasRet(ret,nullable);
	}
	public static Def DefSort (Pos pos,Sort sort)
	{
	    return (Def) new DefSort(pos,sort);
	}
	public static Def DefRecord (Pos pos,Ctor ctor)
	{
	    return (Def) new DefRecord(pos,ctor);
	}
	public static Def DefExtern (Pos pos,string name)
	{
	    return (Def) new DefExtern(pos,name);
	}
	public static Def DefEnum (Pos pos,string name,System.Collections.Generic.List<string> cases)
	{
	    return (Def) new DefEnum(pos,name,cases);
	}

		public DTSchemaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DTSchemaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		public System.Collections.Generic.List<Def> result;
		public Start__y_Context v;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(DTSchemaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Start__y_Context start__y_() {
			return GetRuleContext<Start__y_Context>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			_localctx.v = start__y_();
			State = 43;
			Match(Eof);
			 _localctx.result =  _localctx.v.result; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class List_o_definition_p_Context : ParserRuleContext {
		public System.Collections.Generic.List<Def> result;
		public List_o_definition_p_Context list_o_definition_p__0__1;
		public DefinitionContext list_o_definition_p__1__1;
		public DefinitionContext list_o_definition_p__0__2;
		[System.Diagnostics.DebuggerNonUserCode] public DefinitionContext definition() {
			return GetRuleContext<DefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public List_o_definition_p_Context list_o_definition_p_() {
			return GetRuleContext<List_o_definition_p_Context>(0);
		}
		public List_o_definition_p_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list_o_definition_p_; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.EnterList_o_definition_p_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.ExitList_o_definition_p_(this);
		}
	}

	[RuleVersion(0)]
	public List_o_definition_p_Context list_o_definition_p_() {
		return list_o_definition_p_(0);
	}

	private List_o_definition_p_Context list_o_definition_p_(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		List_o_definition_p_Context _localctx = new List_o_definition_p_Context(Context, _parentState);
		List_o_definition_p_Context _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_list_o_definition_p_, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 47;
			_localctx.list_o_definition_p__1__1 = definition();
			 _localctx.result =  new System.Collections.Generic.List<Def> { _localctx.list_o_definition_p__1__1.result };
			            
			}
			Context.Stop = TokenStream.LT(-1);
			State = 56;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new List_o_definition_p_Context(_parentctx, _parentState);
					_localctx.list_o_definition_p__0__1 = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_list_o_definition_p_);
					State = 50;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 51;
					_localctx.list_o_definition_p__0__2 = definition();
					 _localctx.result =  (System.Collections.Generic.List<Def>) appendList<Def>((System.Collections.Generic.List<Def>) _localctx.list_o_definition_p__0__1.result, (Def) _localctx.list_o_definition_p__0__2.result);
					                      
					}
					} 
				}
				State = 58;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Start__y_Context : ParserRuleContext {
		public System.Collections.Generic.List<Def> result;
		public List_o_definition_p_Context start__y__0__1;
		[System.Diagnostics.DebuggerNonUserCode] public List_o_definition_p_Context list_o_definition_p_() {
			return GetRuleContext<List_o_definition_p_Context>(0);
		}
		public Start__y_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start__y_; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.EnterStart__y_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.ExitStart__y_(this);
		}
	}

	[RuleVersion(0)]
	public Start__y_Context start__y_() {
		Start__y_Context _localctx = new Start__y_Context(Context, State);
		EnterRule(_localctx, 4, RULE_start__y_);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			_localctx.start__y__0__1 = list_o_definition_p_(0);
			 _localctx.result =  _localctx.start__y__0__1.result;
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefinitionContext : ParserRuleContext {
		public Def result;
		public Def_t_recordContext definition_0__1;
		public Def_t_sortContext definition_1__1;
		public Def_t_externContext definition_2__1;
		public Def_t_enumContext definition_3__1;
		[System.Diagnostics.DebuggerNonUserCode] public Def_t_recordContext def_t_record() {
			return GetRuleContext<Def_t_recordContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Def_t_sortContext def_t_sort() {
			return GetRuleContext<Def_t_sortContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Def_t_externContext def_t_extern() {
			return GetRuleContext<Def_t_externContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Def_t_enumContext def_t_enum() {
			return GetRuleContext<Def_t_enumContext>(0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.EnterDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.ExitDefinition(this);
		}
	}

	[RuleVersion(0)]
	public DefinitionContext definition() {
		DefinitionContext _localctx = new DefinitionContext(Context, State);
		EnterRule(_localctx, 6, RULE_definition);
		try {
			State = 74;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 62;
				_localctx.definition_0__1 = def_t_record();
				 _localctx.result =  _localctx.definition_0__1.result;
				            
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 65;
				_localctx.definition_1__1 = def_t_sort();
				 _localctx.result =  _localctx.definition_1__1.result;
				            
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68;
				_localctx.definition_2__1 = def_t_extern();
				 _localctx.result =  _localctx.definition_2__1.result;
				            
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 71;
				_localctx.definition_3__1 = def_t_enum();
				 _localctx.result =  _localctx.definition_3__1.result;
				            
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Enum_t_caseContext : ParserRuleContext {
		public string result;
		public IToken enum_t_case_0__2;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(DTSchemaParser.IDENTIFIER, 0); }
		public Enum_t_caseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enum_t_case; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.EnterEnum_t_case(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.ExitEnum_t_case(this);
		}
	}

	[RuleVersion(0)]
	public Enum_t_caseContext enum_t_case() {
		Enum_t_caseContext _localctx = new Enum_t_caseContext(Context, State);
		EnterRule(_localctx, 8, RULE_enum_t_case);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(T__0);
			State = 77;
			_localctx.enum_t_case_0__2 = Match(IDENTIFIER);
			 _localctx.result =  (string) lexeme((IToken) _localctx.enum_t_case_0__2);
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class List_o_enum_t_case_p_Context : ParserRuleContext {
		public System.Collections.Generic.List<string> result;
		public List_o_enum_t_case_p_Context list_o_enum_t_case_p__0__1;
		public Enum_t_caseContext list_o_enum_t_case_p__1__1;
		public Enum_t_caseContext list_o_enum_t_case_p__0__2;
		[System.Diagnostics.DebuggerNonUserCode] public Enum_t_caseContext enum_t_case() {
			return GetRuleContext<Enum_t_caseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public List_o_enum_t_case_p_Context list_o_enum_t_case_p_() {
			return GetRuleContext<List_o_enum_t_case_p_Context>(0);
		}
		public List_o_enum_t_case_p_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list_o_enum_t_case_p_; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.EnterList_o_enum_t_case_p_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.ExitList_o_enum_t_case_p_(this);
		}
	}

	[RuleVersion(0)]
	public List_o_enum_t_case_p_Context list_o_enum_t_case_p_() {
		return list_o_enum_t_case_p_(0);
	}

	private List_o_enum_t_case_p_Context list_o_enum_t_case_p_(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		List_o_enum_t_case_p_Context _localctx = new List_o_enum_t_case_p_Context(Context, _parentState);
		List_o_enum_t_case_p_Context _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_list_o_enum_t_case_p_, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 81;
			_localctx.list_o_enum_t_case_p__1__1 = enum_t_case();
			 _localctx.result =  new System.Collections.Generic.List<string> { _localctx.list_o_enum_t_case_p__1__1.result };
			            
			}
			Context.Stop = TokenStream.LT(-1);
			State = 90;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new List_o_enum_t_case_p_Context(_parentctx, _parentState);
					_localctx.list_o_enum_t_case_p__0__1 = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_list_o_enum_t_case_p_);
					State = 84;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 85;
					_localctx.list_o_enum_t_case_p__0__2 = enum_t_case();
					 _localctx.result =  (System.Collections.Generic.List<string>) appendList<string>((System.Collections.Generic.List<string>) _localctx.list_o_enum_t_case_p__0__1.result, (string) _localctx.list_o_enum_t_case_p__0__2.result);
					                      
					}
					} 
				}
				State = 92;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Def_t_enumContext : ParserRuleContext {
		public Def result;
		public IToken def_t_enum_0__1;
		public IToken def_t_enum_0__2;
		public List_o_enum_t_case_p_Context def_t_enum_0__4;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(DTSchemaParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public List_o_enum_t_case_p_Context list_o_enum_t_case_p_() {
			return GetRuleContext<List_o_enum_t_case_p_Context>(0);
		}
		public Def_t_enumContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_def_t_enum; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.EnterDef_t_enum(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDTSchemaListener typedListener = listener as IDTSchemaListener;
			if (typedListener != null) typedListener.ExitDef_t_enum(this);
		}
	}

	[RuleVersion(0)]
	public Def_t_enumContext def_t_enum() {
		Def_t_enumContext _localctx = new Def_t_enumContext(Context, State);
		EnterRule(_localctx, 12, RULE_def_t_enum);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			_localctx.def_t_enum_0__1 = Match(T__1);
			State = 94;
			_localctx.def_t_enum_0__2 = Match(IDENTIFIER);
			State = 95;
			Match(T__2);
			State = 96;
			_localctx.def_t_enum_0__4 = list_o_enum_t_case_p_(0);
			 _localctx.result =  (Def) DefEnum((Pos) (Pos) getPos((IToken) _localctx.def_t_enum_0__1), (string) (string) lexeme((IToken) _localctx.def_t_enum_0__2), (System.Collections.Generic.List<string>) _localctx.def_t_enum_0__4.result);
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Def_t_externContext : ParserRuleContext {
		public Def result;
		public IToken def_t_extern_0__1;
		public IToken def_t_extern_0__3;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(DTSchemaParser.IDENTIFIER, 0); }
		public Def_t_externContext(ParserRuleContext parent, int invokingState)
